Update cv image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing = "30">
     <tr>
-      <td><img src="images/dennis2.jpg" alt="Dennis profile picture"></td>
+      <td><img src="images/fotoGitHub.jpg" alt="Dennis profile picture"></td>
       <td><h1>Dennis Veintimilla</h1>
 
       <p><em>Computer Systems Engineer and Full Stack Web Developer</em></p>
